objects/Model__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Model_1_from__c</fullName>
        <label>Model 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_1_to__c</fullName>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_2_from__c</fullName>
        <label>Model 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_2_to__c</fullName>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_3_from__c</fullName>
        <label>Model 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_3_to__c</fullName>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Bariatric_Ranges__c</fullName>
        <label>Model Bariatric Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Cardiology_Ranges__c</fullName>
        <label>Model Cardiology Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Colon_Ranges__c</fullName>
        <label>Model Colon Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_OB_Commercial_Ranges__c</fullName>
        <label>Model OB Commercial Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_OB_Medicade_Ranges__c</fullName>
        <label>Model OB Medicaid Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Ortho_Hip_Ranges__c</fullName>
        <label>Model Ortho Hip Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Ortho_Knee_Ranges__c</fullName>
        <label>Model Ortho Knee Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Ortho_Spine_Ranges__c</fullName>
        <label>Model Ortho Spine Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_for_Breast_Ranges__c</fullName>
        <label>Model for Breast Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Campaign Model</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Models Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>